# bootcamp-srinivas

./: .gitignore  README.md
APIs/API_Client_Programming/: .env  ex-14.py  ex-3.py  ex-5.py
APIs/API_Client_Programming/ex-1/: notes.html  notes.md
APIs/API_Client_Programming/ex-10/: ex-10.py  notes.md
APIs/API_Client_Programming/ex-11/: ex-11.py  notes.md
Streams/Drills/: ex-2.py  ex-3.py  ex-8.py
Streams/Learning_Iterators/: iterators.py  str_range.py  stream_of_reacords.py
Streams/TextTransform/: README.md  pyproject.toml
Streams/TextTransform/src/: processing_functions.py  stream_adapter_functions.py
learmings/: poetry.html
learnings/: notes.md  pyenv.html  vmA&DNS.html
mytestenv/: pyvenv.cfg
mytestenv/Scripts/: activate  activate.bat
persistance/: cyclic_nodes.pkl  notes.html  person.pkl
persistance/Persistence_using_File_and_DB/: game_state.pkl  game_v1.pkl  notes.html  notes.md
persistance/SQLAlchemy_Pydantic_Practice_Exercises/: app.db  notes.md
persistance/SQLAlchemy_Pydantic_Practice_Exercises/Beginner_Level/ex-1/: main.py  notes.html  notes.md  pyproject.toml
persistance/SQLite/: notes.html  notes.md  notes1_db_blog_summary.html  notes1_db_blog_summary.md
persistance/SQLite_installtion_and_Testing/: example.db  generate_inserts.sql  notes.md  notes1.html  notes1.md
persistent_queue_project/: .gitignore  README.md  pyproject.toml  pytest.ini  reset.sh  supervisord.conf
persistent_queue_project/src/consumer/: consumer.py
persistent_queue_project/src/jobqueue/: __init__.py  interface.py  sqlite_backend.py
persistent_queue_project/src/producer/: producer.py
persistent_queue_project/src/ui/: manager.py  ops.py
persistent_queue_project/tests/: test_consumer.py  test_jobqueue.py  test_producer.py  test_setup.py
project1/persistent_queue_project/: .gitignore  README.md  notes.html  requirements.txt  setup.py  supervisord.conf
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/: notes.md  pyproject.toml
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/ex-2/: lestcheck.py  setup.py
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/ex_1/: sayhello.py
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/hello-world/: README.md  _config.yaml  notes.html  pyproject.toml
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/hello-world/src/hello_world/: cli.py  config.py  main.py  say_hello.py
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/helloworld/: main.py  pyproject.toml
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/helloworld/src/helloworld/: sayhello.py
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/many-hellos/: main.py  pyproject.toml
python_basics/Basic_Drills_To_Understand_The_Ways_Of_Working/many-hellos/src/many_hellos/: cli.py
python_basics/Data_Structures/: ex-11.py  ex-13.py  ex-14.py  ex-5.py  ex-6.py
python_basics/Decorators_And_Lambda_Functions/: ex-16.py  ex-5.py  ex-6.py
python_basics/More_Classes/: ex-10.py  ex-11.py  ex-13.py  ex-14.py  ex-16.py  ex-4.py  ex-6.py  ex-7.py
python_basics/ex-1-1/: greetings.py  main.py  say_hello.py
python_basics/ex-1-2/: say_hello.py
python_basics/ex-2-1/: ex-1.py  ex-11.py  ex-12.py  ex-13.py  ex-14.py  ex-15.py  ex-16.py  ex-18.py  ex-19.py  ex-3.py  ex-4.py  ex-5.py  ex-6.py  ex-7.py  ex-8.py
python_basics/ex-3-1/: ex-15.py  ex-2.py  ex-20.py  ex-21.py  ex-3.py  ex-8.py  ex-9.py
python_basics/ex-4-1/: ex-1.py  ex-10.py  ex-12.py  ex-13.py  ex-14.py  ex-15.py  ex-17.py  ex-18.py  ex-20.py  ex-3.py  ex-4.py  ex-7.py  ex-8.py  ex-9.py
python_basics/ex-5-1/: ex-12.py  ex-2.py  ex-3.py  ex-9.py
(+333 files in other folders)
