# pyproject.toml
# Purpose: Defines project metadata and dependencies with modern Poetry standards

[project]
name = "persistent_queue_project"
version = "0.1.0"
description = "A scalable, fault-tolerant producer-consumer system with persistent job queue"
authors = [{ name = "Srinivas Sarkar", email = "srinivassarkar07@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["queue", "producer-consumer", "streamlit", "persistent"]
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.39.0",
    "supervisor>=4.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.35"
]

[tool.poetry]
package-mode = false


[project.optional-dependencies]
redis = ["redis>=5.1.0"]  # Optional backend support

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
black = "^25.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
