[project]
name = "say_helloo"
version = "0.1.1"
description = ""
authors = [
    {name = "Srinivas Sarkar",email = "srinivassarkar07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "hello_world", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
