[project]
name = "many-hellos"
version = "0.1.0"
description = ""
authors = [
    {name = "Srinivas Sarkar",email = "srinivassarkar07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.15.1,<0.16.0)"
]

[tool.poetry]
packages = [{include = "many_hellos", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
